# OPE

./: .gitignore  Cargo.toml  README.md  ope.md
.github/workflows/: ci.yml
bindings/: README.md  build-native.sh
bindings/c/example/: verify_vector.c
bindings/c/include/: ope.h
bindings/cpp/include/ope/: ope.hpp
bindings/go/: README.md  go.mod
bindings/go/ope/: ope.go  ope_test.go
bindings/python/: README.md  pyproject.toml
bindings/python/ope/: __init__.py  _native.py
bindings/python/tests/: test_vectors.py
bindings/ts/: README.md  package-lock.json  package.json
bindings/ts/src/: index.ts  native.ts
bindings/ts/src/test/: vectors.test.ts
crates/ope-attest/: Cargo.toml
crates/ope-attest/src/: canonical.rs  error.rs  lib.rs  mock.rs  sign.rs  types.rs  verify.rs
crates/ope-attest/tests/: mock_attester.rs
crates/ope-cli/: Cargo.toml
crates/ope-cli/src/: main.rs  vectors.rs
crates/ope-crypto/: Cargo.toml
crates/ope-crypto/src/: aead.rs  base64url.rs  ed25519.rs  hash.rs  lib.rs  mock.rs
crates/ope-e2e/: Cargo.toml
crates/ope-e2e/src/: e2e_fields.rs  error.rs  identity.rs  kex.rs  lib.rs  mock.rs  request.rs  response.rs  stream.rs
crates/ope-e2e/tests/: roundtrip.rs
crates/ope-envelope/: Cargo.toml
crates/ope-envelope/src/: canonical.rs  encrypt.rs  envelope.rs  error.rs  lib.rs  model.rs  sign.rs  verify.rs
crates/ope-envelope/tests/: vector_001.rs  vectors.rs
crates/ope-ffi/: Cargo.toml
crates/ope-ffi/src/: e2e.rs  envelope.rs  error.rs  lib.rs
crates/ope-gateway/: Cargo.toml
crates/ope-gateway/src/: lib.rs
crates/ope-gateway/tests/: gateway.rs
crates/ope-http/: Cargo.toml
crates/ope-http/src/: lib.rs
crates/ope-server/: Cargo.toml
crates/ope-server/src/: lib.rs
crates/ope-transport/: Cargo.toml
crates/ope-transport/src/: error.rs  hkdf.rs  hybrid.rs  lib.rs  sizes.rs  vectors.rs
crates/ope-transport/tests/: official_vectors.rs
docs/: ARCHITECTURE.md  ROADMAP.md  confidential-ai.md  tls-integration.md
sdks/conversation/: Cargo.toml
sdks/conversation/src/: lib.rs
sdks/conversation/tests/: manifest.rs
spec/: ope-confidential-ai.md  ope-transport.md
spec/vectors/: 001-valid-plaintext.json  002-invalid-signature.json  003-replayed-nonce.json  004-stale-timestamp.json  005-encrypted-roundtrip.json  006-wrong-recipient.json  007-malformed-canonical.json  008-invalid-model-id.json  README.md
spec/vectors/transport/: README.md  boringssl-mlkem768-000.json  boringssl-mlkem768-001.json  boringssl-mlkem768-002.json  hybrid-x25519mlkem768-000.json  rfc7748-x25519-001.json
tools/: import_transport_vectors.py
