[workspace]
resolver = "2"
members = [
    "crates/ope-crypto",
    "crates/ope-envelope",
    "crates/ope-transport",
    "crates/ope-e2e",
    "crates/ope-http",
    "crates/ope-attest",
    "crates/ope-gateway",
    "crates/ope-server",
    "crates/ope-ffi",
    "crates/ope-cli",
    "sdks/conversation",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/ClawBay/OPE"
rust-version = "1.85"

[workspace.dependencies]
kem = { version = "0.3.0", features = ["getrandom"] }
base64 = "0.22"
chrono = { version = "0.4", default-features = false, features = ["std", "clock"] }
ed25519-dalek = { version = "2", features = ["rand_core"] }
ml-kem = { version = "0.3", features = ["getrandom"] }
rand = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
hex = "0.4"
sha2 = "0.10"
aes-gcm = "0.10"
chacha20poly1305 = "0.10"
hkdf = "0.12"
thiserror = "2"
axum = "0.8"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "net"] }
tower = "0.5"
uuid = { version = "1", features = ["v4"] }
x25519-dalek = { version = "2", features = ["static_secrets"] }

ope-attest = { path = "crates/ope-attest" }
ope-crypto = { path = "crates/ope-crypto" }
ope-envelope = { path = "crates/ope-envelope" }
ope-gateway = { path = "crates/ope-gateway" }
ope-http = { path = "crates/ope-http" }
ope-server = { path = "crates/ope-server" }
ope-transport = { path = "crates/ope-transport" }
ope-e2e = { path = "crates/ope-e2e" }
