[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "ope-bindings"
version = "0.1.0"
description = "Python bindings for Open Privacy Envelope (OPE)"
readme = "README.md"
requires-python = ">=3.9"

[project.optional-dependencies]
dev = ["pytest>=7"]

[tool.setuptools.packages.find]
where = ["."]
include = ["ope*"]
