[package]
name = "ope-attest"
description = "OPE attestation and verification (stub)"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
chrono = { workspace = true }
ope-crypto = { workspace = true }
ope-envelope = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }
