[package]
name = "ope-e2e"
description = "OPE Confidential AI: hybrid PQ application-layer E2E encryption"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
chacha20poly1305 = { workspace = true }
hkdf = { workspace = true }
kem = "0.3.0-pre.0"
ml-kem = { workspace = true }
ope-crypto = { workspace = true }
ope-envelope = { workspace = true }
ope-transport = { workspace = true }
rand = { workspace = true }
rand_chacha = "0.3"
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
sha2 = { workspace = true }
thiserror = { workspace = true }
x25519-dalek = { workspace = true }

[dev-dependencies]
serde_json = { workspace = true }
