[package]
name = "ope-envelope"
description = "OPE envelope signing, verification, and canonicalization"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
chrono = { workspace = true }
ope-crypto = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
rand = { workspace = true }

[dev-dependencies]
hex = "0.4"
