[package]
name = "ope-ffi"
description = "C FFI for OPE envelope verify"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
ope-crypto = { workspace = true }
ope-envelope = { workspace = true }
serde_json = { workspace = true }
