[package]
name = "ope-ffi"
description = "C FFI for OPE envelope sign/verify"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[lib]
crate-type = ["cdylib", "staticlib", "rlib"]

[dependencies]
ope-crypto = { workspace = true }
ope-envelope = { workspace = true }
ope-transport = { workspace = true }
ope-e2e = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
zeroize = { version = "1", features = ["zeroize_derive"] }

[dev-dependencies]
chrono = { workspace = true }
