[package]
name = "ope-conversation-sdk"
description = "OPE application SDK: local conversation layout (P4)"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
ope-crypto = { workspace = true }
